# react-native-blob-util

./: README.md  android.js  fetch.js  fs.js  ios.js  package-lock.json  package.json
android/src/main/java/com/ReactNativeBlobUtil/: ReactNativeBlobUtilFS.java  ReactNativeBlobUtilImpl.java  ReactNativeBlobUtilMediaCollection.java
class/: ReactNativeBlobUtilReadStream.js
codegenSpecs/: NativeBlobUtils.js
harmony/: blobUtil.har
harmony/blobUtil/: BuildProfile.ets  oh-package-lock.json5  oh-package.json5  ts.ts
harmony/blobUtil/src/main/: module.json5
harmony/blobUtil/src/main/cpp/: BlobUtilPackage.h  BlobUtilTurboModule.cpp  BlobUtilTurboModule.h  CMakeLists.txt
harmony/blobUtil/src/main/ets/: BlobUtilPackage.ts  BlobUtilTurboModule.ts  Logger.ets  Logger.ts
harmony/blobUtil/src/main/ets/ReactNativeBlobUtil/: ReactNativeBlobUtilConfig.ts  ReactNativeBlobUtilFS.ts  ReactNativeBlobUtilImpl.ts  ReactNativeBlobUtilReq.ts  ReactNativeBlobUtilStream.ts
harmony/blobUtil/src/main/ets/down/: RequestDownload.ts
harmony/blobUtil/src/main/ets/upload/: RequestUpload.ets
harmony/blobUtil/src/main/ets/utils/: FileUtils.ts  ReactNativeBlobUtilConst.ts  UrlUtil.ets
